5 Dec 2011: Wouter
	- sigHUP reloads config and reopens logfile for log rotation support.
	- acxnlnetlabs updated to version 17.
	- fix fedora16 windows crosscompile.

2 Dec 2011: Wouter
	- configure generated with autoconf 2.6.8.

30 Nov 2011: Wouter
	- Fix where race condition could cause blacklist of open resolver.
	- Fix to flush_infra and flush_requestlist when we use open resolver,
	  the proxy that causes this to be used as fallback has polluted those
	  entries (possibly).

29 Nov 2011: Wouter
	- Fix bug where no IPv6 causes wrong test results, notably SSL, due
	  to the error report code.

13 Nov 2011: Wouter
	- control unsafe shows the dialog popup again.

9 Nov 2011: Wouter
	- Fix that if network down (nothing pings) then it picks disconnect,
	  for slow bootup where the machine has the previous network settings.

8 Nov 2011: Wouter
	- the test_tcp and test_ssl command do not have the 20-sec tcpretry
	  once timer, so that the test can try unbound.
	- config for new open resolver (port 80 TCP, port 443 SSL).  No more
	  probe plain tcp on port 443.

7 Nov 2011: Wouter
	- fixed the OSX installer problem, launchd does not load userspace
	  agents without hacks, and has side-effects that enables boot-start.
	- more detailed logging at verbosity 4 (prints wire and dig output).

4 Nov 2011: Wouter
	- on OSX update config if old (no ssl443).
	- on OSX install config file before attempting to modify it.

3 Nov 2011: Wouter
	- remove error dialog at end of osx install.

2 Nov 2011: Wouter
	- check ssl fingerprint of servers.
	- remind user on make install about ssl443.

1 Nov 2011: Wouter
	- probe ssl servers (nlnetlabs default server configured).

31 Oct 2011: Wouter
	- do not log errors for unclean ssl close.

28 Oct 2011: Wouter
	- documentation fixes
	- osx dmg install fix for 10.6 packager (start of userspace panel).
	  also framework for debug logging in postflight of packager.
	  10.6 packages work on 10.7.  10.7 packages work on 10.7.
	- tag 0.7