@@ -2,6 +2,7 @@
 	- sigHUP reloads config and reopens logfile for log rotation support.
 	- acxnlnetlabs updated to version 17.
 	- fix fedora16 windows crosscompile.
+	- fix double definition of malloc.
 
 2 Dec 2011: Wouter
 	- configure generated with autoconf 2.6.8.
